# biscuit-wasm

./: .gitignore  .travis.yml  Cargo.toml  README.md
.github/workflows/: ci.yml
example/: README.md  package-lock.json  package.json  webpack.config.js
example/public/: index.html
example/src/: index.js
src/: builder.rs  crypto.rs  error.rs  lib.rs  verifier.rs
tests/: wasm_test.js  wasm_test.rs
