[package]
name = "biscuit-wasm"
version = "0.1.0"
authors = ["Alessio Coltellacci <alessio.coltellacci@clever-cloud.com>", "Geoffroy Couprie <geoffroy.couprie@clever-cloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
biscuit = { path = "../biscuit-rust" }
serde = { version = "1.0", features = ["derive"] }
rand = { version = "0.6", features = ["wasm-bindgen"] }
rand_core = "^0.3"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"