[package]
name = "biscuit-wasm"
version = "0.1.0"
authors = ["Alessio Coltellacci <alessio.coltellacci@clever-cloud.com>", "Geoffroy Couprie <geoffroy.couprie@clever-cloud.com>"]
edition = "2018"

[profile.release]
lto = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
#biscuit = { path = "../rust", git = "https://github.com/clevercloud/biscuit-rust" }
biscuit-auth = "0.5"
serde = { version = "1.0", features = ["derive"] }
rand = { version = "0.7", features = ["wasm-bindgen"] }
rand_core = "^0.5"
wasm-bindgen = { version = "=0.2.60", features = ["serde-serialize"] }
wee_alloc = "0.4"

[dev-dependencies]
wasm-bindgen-test = "0.3"
